chore: update logic

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Figtree", sans-serif;
+  font-family: Glegoo, sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
   background-color: #000;
